--- a/github_l10n/index.html
+++ b/github_l10n/index.html
@@ -5,24 +5,24 @@
   <title>Basic GitHub for localizers</title>
   <style type="text/css">
     body {
-    	background-color: #f9f9f9; 
-    	font-family: Arial, Verdana; 
-    	font-size: 16px; 
+    	background-color: #f9f9f9;
+    	font-family: Arial, Verdana;
+    	font-size: 16px;
     	padding: 10px 30px;
     }
     p {
-    	margin: 0 0 20px; 
+    	margin: 0 0 20px;
     	line-height: 1.4em;
    	}
     p#update {
-    	margin: 40px 0 10px; 
-    	text-align: right; 
+    	margin: 40px 0 10px;
+    	text-align: right;
     	font-size: 0.8em;
     }
     div#main {
-    	width: 800px; 
-    	margin: 0 auto; 
-    	background-color: #FFF; 
+    	width: 800px;
+    	margin: 0 auto;
+    	background-color: #FFF;
     	padding: 10px 20px;
         border: 1px solid #888;
         border-radius: 12px;
@@ -31,11 +31,11 @@
         box-shadow: 7px 7px 5px rgba(0, 0, 0, 0.15);
     }
     img {
-    	display: block; 
+    	display: block;
     	margin: 20px auto;
         padding: 2px;
         border: 1px solid #CCC;
-   	}    
+   	}
     pre {
         background: #F2F2F2;
         padding: 10px;
@@ -51,13 +51,13 @@
 <body>
 	<div id="main">
 		<h1>Basic Git for localizers</h1>
-		
+
 		<h2>Fork a repository</h2>
 		<p>If you don't have an account on GitHub, register one for free on <a href="https://github.com">github.com</a> and <a href="https://help.github.com/articles/set-up-git#platform-all">install git</a> on your system.</p>
-		<p>Once you login, go to the repository you're interested in and create a "fork". 
+		<p>Once you login, go to the repository you're interested in and create a "fork".
 		Let's say you want to create a fork of <kbd>webpay</kbd>: go to <a href="https://github.com/mozilla/webpay">github.com/mozilla/webpay</a> and click on the <strong>Fork</strong> button on the top right.<img src="img/git1.png" alt="fork" title="Fork the repository" /></p>
 		<p>This will create a fork (think of it as a copy) of the <kbd>webpay</kbd> repository in your own account.</p>
-		
+
 		<h2>Clone your forked repository</h2>
 		<p>Now you have to clone the repository on your computer. Suppose that your username is <kbd>l10nguy</kbd>, you need to clone <a href="https://github.com/l10nguy/webpay">https://github.com/l10nguy/webpay</a> and tell the system that you want to use the original Mozilla repository as a source for updates.</p>
         <p>These are the commands you need to run in your terminal (move into the folder where you want to keep your files before running them):</p>
@@ -77,7 +77,7 @@ git remote add upstream https://github.com/mozilla/webpay</pre>
 git stash
 
 # Ensure that you're on the branch called Master
-git checkout master			
+git checkout master
 
 # Pull changes from Mozilla's repositories, merge to your repository and push
 # changes to Github
@@ -109,16 +109,21 @@ git commit -m "Updated Italian localization"
 git push</pre>
 		<p>Now you can go to your forked repository on GitHub and you will see something like this.</p>
         <img src="img/git2.png" alt="pr" title="Create pull request" />
-		<p>Click on the button <strong>Compare &amp; pull request</strong>, check the pull request (you can see the diff on the bottom of the page) and if everything looks good click on the green button <strong>Send pull request</strong> to complete the procedure. 
+		<p>Click on the button <strong>Compare &amp; pull request</strong>, check the pull request (you can see the diff on the bottom of the page) and if everything looks good click on the green button <strong>Send pull request</strong> to complete the procedure.
         <img src="img/git3.png" alt="pr" title="Create pull request" />
         You'll receive an email when the pull request is merged into the project, or if there's a problem with the pull request and someone added a comment. If necessary, you can modify or close your pull request from the <a href="https://github.com/mozilla/webpay/pulls">project's pull requests list</a> (select your pull request, the <kbd>Close</kbd> button is at the end of the screen).
         <img src="img/git4.png" alt="pr" title="Create pull request" />
         </p>
 
 		<h2>Final suggestions</h2>
-		<p>If something goes wrong, you can always delete your forked repository and start from scratch, or return to the branch Master (see Update section) and create a new clean branch to start from. As a personal suggestion, don't ever commit to Master, just create new branches for your own changes.</p>
+		<ul>
+            <li>If something goes wrong, you can always delete your forked repository and start from scratch, or return to the branch Master (see Update section) and create a new clean branch to start from. As a personal suggestion, don't ever commit to Master, just create new branches for your own changes.</li>
+            <li>Always update your forked repository before creating new branches.</li>
+            <li>If you create a pull request from the branch jul29_it and push other commits to the same branch, the pull request will be automatically updated. In other words: if you don't want to change your original pull request, don't push to that branch until the pull request is approved and merged.</li>
+        </ul>
 
-		<p id="update">Last updated: 2013-07-29</p>
+        <p>Note: this doc is available on <a href="https://github.com/flodolo/docs/tree/master/github_l10n">GitHub</a>. If you want to improve it, you should know how do it now ;-) </p>
+		<p id="update">Last updated: 2013-08-06</p>
 	</div>
 </body>
 </html>
