Fix instruction to add remote (not inside clone yet)

--- a/github_l10n/index.html
+++ b/github_l10n/index.html
@@ -65,6 +65,9 @@
 # You're cloning your forked repository, so github.com/YOURUSER/REPOSITORY
 git clone https://github.com/l10nguy/webpay
 
+# Move in the clone's folder created by the previous command
+cd webpay
+
 # You're telling Git to use another repository as a source
 # So not YOURUSER but MOZILLA in this case
 git remote add upstream https://github.com/mozilla/webpay</pre>
