--- a/github_l10n/index.html
+++ b/github_l10n/index.html
@@ -34,7 +34,6 @@
     	display: block;
     	margin: 20px auto;
         padding: 2px;
-        border: 1px solid #CCC;
    	}
     pre {
         background: #F2F2F2;
@@ -50,13 +49,14 @@
 
 <body>
 	<div id="main">
-		<h1>Basic Git for localizers</h1>
+		<h1>Basic Git for Localizers</h1>
 
 		<h2>Fork a repository</h2>
 		<p>If you don’t have an account on GitHub, register one for free on <a href="https://github.com">github.com</a> and <a href="https://help.github.com/articles/set-up-git#platform-all">install git</a> on your system.</p>
 		<p>Once you login, go to the repository you’re interested in and create a "fork".
 		Let’s say you want to create a fork of <kbd>webpay</kbd>: go to <a href="https://github.com/mozilla/webpay">github.com/mozilla/webpay</a> and click on the <strong>Fork</strong> button in the top right part of the page.<img src="img/git1.png" alt="fork" title="Fork the repository" /></p>
 		<p>This will create a fork – think of it as a copy – of the <kbd>webpay</kbd> repository in your own account. At this point your fork and the original repository share the same history, but will live separate lives from this moment on.</p>
+        <img src="img/repo1.png" alt="Fork and Original Repo" title="Two repositories, same history" />
 
 		<h2>Clone your forked repository</h2>
 		<p>Now you have to clone the repository on your computer. Suppose that your username is <kbd>l10nguy</kbd>, you need to clone <a href="https://github.com/l10nguy/webpay">https://github.com/l10nguy/webpay</a> and tell the system that you want to use the original Mozilla repository as a source for updates.</p>
@@ -68,12 +68,14 @@ git clone https://github.com/l10nguy/webpay
 # Move in the clone’s folder created by the previous command
 cd webpay
 
-# You’re telling Git to use another repository as a source
-# So not YOURUSER but MOZILLA in this case
+# You’re telling Git to use another repository as a source.
+# So not YOURUSER but MOZILLA in this case (owner of the original repository)
 git remote add upstream https://github.com/mozilla/webpay</pre>
 
 		<h2>Update your forked repository</h2>
-		<p>Now you have a local copy of your fork inside the folder <kbd>webpay</kbd>. When you want to update your local copy, importing new changes from the original repository, you need to run these commands from inside the repository (i.e. the <kbd>webpay</kbd> folder).</p>
+		<p>Now you have a local copy of your fork inside the folder <kbd>webpay</kbd>. Remember: your fork and the original source are now two separate entities. Suppose someone made a new commit on master to the original repository after you forked it: this commit won't be automatically available in your fork.</p>
+        <img src="img/repo4.png" alt="Original repo with new commit" title="Original repo with new commit" />
+        <p>When you want to update your local copy, importing new changes from the original repository, you need to run these commands from inside the repository (i.e. the <kbd>webpay</kbd> folder).</p>
 		<pre>
 # Important: the following line will delete every local change. It’s useful to
 # avoid conflicts and merges, if you know what you’re doing you can ignore it
@@ -83,7 +85,8 @@ git stash
 git checkout master
 
 # Pull changes from Mozilla’s repositories, merge to your repository and push
-# changes to Github
+# changes to Github. We told Git what "upstream" is right after cloning
+# the repository.
 git fetch upstream
 git merge upstream/master
 git push</pre>
@@ -101,7 +104,8 @@ To squelch this message and adopt the new behavior now, use:
         <p>To fix it and adopt the new default behavior, simply run the last command from the command prompt (<a href="http://stackoverflow.com/questions/13148066/warning-push-default-is-unset-its-implicit-value-is-changing-in-git-2-0">more details here</a>).</p>
         <pre>git config --global push.default simple</pre>
 		<h2>Create a pull request to update your locale</h2>
-		<p>As a first step you need to create a branch in your repository, so you have to choose a name. For example let’s call this branch <kbd>jul29_it</kbd></p>
+		<p>As a first step you need to create a branch in your repository, so you’ll have to choose a name for it. For example let’s call this branch <kbd>jul29_it</kbd></p>
+        <p>You should never commit changes to master, since it will create merge conflicts when trying to update against the original repository.</p>
 		<pre>
 # Create the branch
 git branch jul29_it
@@ -111,7 +115,14 @@ git checkout jul29_it
 
 # Push the new branch to your repository on GitHub
 git push origin jul29_it</pre>
-		<p>At this point your local files are on the branch called <kbd>jul29_it</kbd> (you can always check the current branch or the files modified by running <kbd>git status</kbd>). Update the .po files and when you’re ready commit your changes using these commands. In this case I’m updating Italian and the file is <kbd>locale/it/LC_MESSAGES/messages.po</kbd> (don’t commit .mo files, they’re compiled from .po and not necessary).</p>
+        <p>This is the result:</p>
+        <img src="img/repo2.png" alt="New branch on fork" title="New branch on fork" />
+		<p>At this point your local files are on the branch called <kbd>jul29_it</kbd>. You can always check the current branch or the files modified by running <kbd>git status</kbd>:</p>
+        <pre>
+On branch jul29_it
+nothing to commit, working directory clean
+        </pre>
+        <p>Update the files and, when you’re ready, commit your changes using these commands. In this case I’m updating Italian and the file is <kbd>locale/it/LC_MESSAGES/messages.po</kbd> (side note: don’t commit .mo files, they’re compiled from .po and not necessary).</p>
 		<pre>
 # Add the updated file to the commit
 git add locale/it/LC_MESSAGES/messages.po
@@ -121,6 +132,8 @@ git commit -m "Updated Italian localization"
 
 # Push changes to GitHub
 git push origin jul29_it</pre>
+        <p>At this point your branch will be one commit ahead of master.</p>
+        <img src="img/repo3.png" alt="New branch with commit" title="New branch with commit" />
 		<p>Now you can go to your forked repository on GitHub and you will see something like this.</p>
         <img src="img/git2.png" alt="pr" title="Create pull request" />
 		<p>Click on the button <strong>Compare &amp; pull request</strong>, check the pull request (you can see the diff at the bottom of the page) and if everything looks good click on the green button <strong>Send pull request</strong> to complete the procedure.
